Styles Updated html css

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <body>
     <header>
       <div class="container">
-        <nav>Shakespeare Translator</nav>
+        <nav>Shakespeare Alive</nav>
         <p>
-          Understanding Shakespeare might not be possible today but what we
-          could do is use those flex talk for our benefit. So try out this
-          translator.
+          Shakespeare is regarded as one of the artistic minds born. So i tried
+          to use some of it. Trasnalte sommon english to Shakespearen era
+          english.
         </p>
       </div>
     </header>
